# kmeanssa-ng

./: .coverage  .gitignore  .gitlab-ci.yml  .pdm-python  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  WARP.md  mkdocs.yml  paper.bib  paper.md  pyproject.toml
IDEAS/: TEMP_riemannian_example.qmd  TODO_documentation_parameters.md  TODO_final_tasks_for_publication.md  demo_logging.py  demo_logging_debug.py  future_refactoring_sampling_strategies.md  project_analysis_2025-11-05.qmd  test_random_shuffle_only.py  test_random_state.py
docs/: advanced-usage.md  basic-clustering.md  benchmarks.md  bolza.md  clustering-methods.md  concepts.md  conf.py  contributing.md  custom-spaces.md  epsilon-net.md  generators.md  index.md  lloyd.md  parallel-execution.md  performance.md  quantum-graphs.md  quickstart.md  requirements.txt  riemannian-manifolds.md  simulated-annealing.md
docs-backup/: advanced-usage.qmd  concepts.qmd  custom-spaces.qmd  index.qmd  quantum-graphs.qmd  quickstart.qmd  simulated-annealing.qmd
docs-src/: .gitignore  README.qmd  _quarto.yml  advanced-usage.qmd  basic-clustering.qmd  benchmark_data.json  benchmarks.qmd  bolza.qmd  clustering-methods.qmd  concepts.qmd  contributing.qmd  custom-spaces.qmd  epsilon-net.qmd  generators.qmd  index.qmd  lloyd.qmd  parallel-execution.qmd  performance.qmd  quantum-graphs.qmd  quickstart.qmd  riemannian-manifolds.qmd  simulated-annealing.qmd
docs-src/_freeze/advanced-usage/execute-results/: html.json
docs-src/_freeze/basic-clustering/execute-results/: html.json  md.json
docs-src/_freeze/concepts/execute-results/: html.json  md.json
docs-src/_freeze/custom-spaces/execute-results/: html.json
docs-src/_freeze/generators/execute-results/: html.json
docs-src/_freeze/performance/execute-results/: html.json
docs-src/_freeze/quantum-graphs/execute-results/: html.json  md.json
docs-src/_freeze/quickstart/execute-results/: html.json  md.json
docs-src/_freeze/simulated-annealing/execute-results/: html.json
docs-src/_site/: advanced-usage.html  basic-clustering.html  concepts.html  custom-spaces.html  generators.html  index.html  performance.html  quantum-graphs.html  quickstart.html  search.json  simulated-annealing.html
docs-src/_site/site_libs/bootstrap/: bootstrap.min.css
docs-src/api/: index.md  quantum_graph.md  riemannian_manifold.md
docs/api/: core.md  generators.md  index.md  quantum-graph.md  quantum_graph.md
docs/examples/: basic-clustering.md
docs/getting-started/: concepts.md  installation.md  quickstart.md
docs/user-guide/: quantum-graphs.md
examples/paper/: .gitignore  README.md  _env.py  baselines.py  bolza.py  calibration.py  experiments.py  geomstats_overhead.py  grid.py  make_figures.py  make_tables.py  make_timing.py  multistart.py  rate.py  rate_toy.py  reproduce.py  sbm.py  sphere.py  timing_comparison.py
examples/paper/data/: bolza_net_400.npy  bolza_net_800.npy  sphere_net_5000.npz
public/: 404.html  index.html  sitemap.xml
public/api/core/: index.html
public/api/generators/: index.html
public/api/quantum-graph/: index.html
public/basic-clustering/: index.html
public/concepts/: index.html
public/examples/basic-clustering/: index.html
public/getting-started/concepts/: index.html
public/getting-started/installation/: index.html
public/getting-started/quickstart/: index.html
public/quantum-graphs/: index.html
public/quickstart/: index.html
public/search/: search_index.json
public/user-guide/quantum-graphs/: index.html
scripts/: generate_benchmark_docs.py  rendermkdocs.sh
site/: 404.html  index.html  objects.inv  sitemap.xml
site/advanced-usage/: index.html
site/api/core/: index.html
site/api/generators/: index.html
site/api/quantum-graph/: index.html
site/basic-clustering/: index.html
site/concepts/: index.html
site/custom-spaces/: index.html
site/docs/basic-clustering-commonmark/: index.html
site/docs/concepts-commonmark/: index.html
site/docs/quantum-graphs-commonmark/: index.html
site/docs/quickstart-commonmark/: index.html
site/examples/: basic-clustering.qmd
site/examples/basic-clustering/: index.html
site/generators/: index.html
site/getting-started/concepts/: index.html
site/getting-started/installation/: index.html
site/getting-started/quickstart/: index.html
site/performance/: index.html
site/quantum-graphs/: index.html
site/quickstart/: index.html
site/search/: search_index.json
site/simulated-annealing/: index.html
site/user-guide/quantum-graphs/: index.html
src/kmeanssa_ng/: __init__.py
src/kmeanssa_ng/core/: __init__.py  abstract.py  initialization.py  lloyd.py  metrics.py  parallel.py  simulated_annealing.py
src/kmeanssa_ng/core/strategies/: __init__.py  initialization.py  lloyd_update.py  robustification.py  sampling.py  update.py
src/kmeanssa_ng/quantum_graph/: __init__.py  center.py  generators.py  lloyd_update.py  point.py  qg_simulated_annealing.py  robustification.py  sampling.py  space.py  update.py
src/kmeanssa_ng/quantum_graph/__pycache__/: space._batch_distances_numba-16.py39.1.nbc  space._batch_distances_numba-16.py39.2.nbc  space._batch_distances_numba-16.py39.nbi  space._batch_distances_numba-18.py39.1.nbc  space._batch_distances_numba-18.py39.2.nbc  space._batch_distances_numba-18.py39.nbi
src/kmeanssa_ng/riemannian_manifold/: __init__.py  bolza.py  center.py  epsilon_net.py  generators.py  graph.py  point.py  sampling.py  space.py  update.py
tests/: BENCHMARKS.md  test_abstract.py  test_benchmarks.py  test_bolza.py  test_docstring_examples.py  test_epsilon_net.py  test_generators.py  test_lloyd.py  test_manifold_graph.py  test_metrics.py  test_parallel.py  test_quantum_graph.py  test_riemannian_manifold.py  test_sampling_strategies.py  test_simulated_annealing.py  test_space_coverage.py  test_update_strategies.py
