[project]
name = "kmeanssa-ng"
version = "0.2.3"
description = "K-means clustering on quantum graphs and metric spaces using simulated annealing"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Nicolas Klutchnikoff", email = "nicolas.klutchnikoff@univ-rennes2.fr" },
  { name = "Ioana Gavra", email = "ioana.gavra@univ-rennes2.fr" }
]
keywords = [
  "clustering",
  "k-means",
  "metric-spaces",
  "quantum-graphs",
  "simulated-annealing"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
  "networkx>=3.0",
  "numba>=0.60.0",
  "numpy>=1.24.0",
  "pandas>=2.0.0",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.scripts]
format = "ruff format"
check = "ruff check"
rendermkdocs = "quarto render docs-src --output docs"
servemkdocs = "mkdocs serve"

[tool.pdm.dev-dependencies]
test = [
  "pytest>=7.4.0",
  "pytest-cov>=4.1.0",
  "pytest-xdist>=3.3.0",
  "tomli>=2.0.1",
]
lint = [
  "ruff>=0.1.0",
]
docs = [
  "quarto-cli>=1.4.550",
  "mkdocs>=1.5.3",
  "mkdocs-material>=9.1.21",
  "mkdocstrings[python]>=0.22.0",
]
